# parcel

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  parcel.c  parcel.h
example/: CMakeLists.txt  simple.c
src/: CMakeLists.txt  parcel.c
