set(CMAKE_INCLUDE_CURRENT_DIR ON)

set (PARCEL_SOURCE_FILES
    parcel.c
    )

add_library(source OBJECT ${PARCEL_SOURCE_FILES})
set_property(TARGET source
            PROPERTY POSITION_INDEPENDENT_CODE TRUE
            PROPERTY C_STANDARD 99
            PROPERTY C_STANDARD_REQUIRED TRUE
            )
